kubernetes/demo/nginx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.demo.local
      secretName: nginx-demo-tls
  rules:
    - host: nginx.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
